fix: add top spacing between navbar and content on book-request page

--- a/css/book-request.css
+++ b/css/book-request.css
@@ -11,7 +11,7 @@ input[type="radio"] {
 .form-container {
     max-width: 720px;
     margin: 0 auto;
-    padding: 5rem 1.5rem 3rem;
+    padding: 7rem 1.5rem 3rem;
 }
 
 .form-header {
